# Ericyiu420

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-linux-amd64.yml
docs/: linux-tuning.md  shadowrocket.md
examples/: server.toml
scripts/: install-trojan.sh
src/: config.rs  lib.rs  tls.rs  trojan.rs
systemd/: lowprint-trojan.service
tests/: trojan_end_to_end.rs
